# BWT

./: .gitignore  CMakeLists.txt  README.md  compression.cpp  compression.h  compression_res  decompression.cpp  decompression.h  decompression_res  generate_file.cpp  generate_file.h  io.cpp  io.h  main.cpp  origin  search.cpp  search.h  test.cpp  test.h
assignment/: bwt_170819_袁瑞.pptx  report.md
data/analysis/: case_compression_time  case_decompression_time
data/compression/: case0  case1  case12  case15  case18  case3  case6  case9
data/decompression/: case12  case15  case18  case3  case6  case9
data/origin/: case12  case15  case18  case6  case9
src/: compression.cpp  decompression.cpp  generate_file.cpp  main.cpp  search.cpp  search.h  test.cpp
